test/files/neg/virtpatmat_reach_null.check
virtpatmat_reach_null.scala:13: error: unreachable code
      case _                              =>  // unreachable
                                          ^
one error found
